--- a/QuesTwo.html
+++ b/QuesTwo.html
@@ -18,16 +18,7 @@
 <div style="margin-top: 100px">
     <div class="mx-auto card" style="width: 250px">
         <form class="card-body bold">
-            <p>Fist Object</p>
-            <p>{a:10, b:20}</p>
-            <p>Second Object</p>
-            <p>{a:30, c: 40}</p>
-            <p>Third Object</p>
-            <p>{b: 50, c: 20, d: 100}</p>
-            <br>
-            <p id="" class="h6"> New Object </p>
-            <p id="result" class="h6"></p>
-
+            <span id="result"></span>
         </form>
     </div>
 </div>
@@ -37,9 +28,9 @@
 <script>
     var result = document.getElementById("result");
     result.innerHTML = JSON.stringify(extend(
-        {a: 10, b: 20},
-        {a: 30, c: 40},
-        {b: 50, c: 20, d: 100}
+        {a: 10, b: 20}, {a: 10, b: 20}, {a: 10, b: 20},
+        {a: 30, x: 40}, {x: 30, c: 40}, {a: 30, t: 40},
+        {b: 50,r: 50,n: 50,qw: 50, c: 20, d: 100}
         )).replace(/"/g, '').replace(/,/g, ", ");
 
 </script>
